# devin_dit_demo

./: .env.example  README.md  main.py  requirements.txt  test_graph_api.py
modules/: database.py  logger.py  (+2 more)
transcript_minutes_api/: .env  .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  transcript_minutes_app.db
transcript_minutes_api/app/: main.py
transcript_minutes_api/app/modules/: auth_handler.py  database.py  logger.py  openai_client.py
transcript_minutes_api/app/routers/: auth.py  minutes.py  users.py
transcript_minutes_api/app/schemas/: auth.py  minutes.py  users.py
transcript_minutes_api/modules/: auth.py  database.py  graph_client.py  logger.py
transcript_minutes_api/routers/: graph.py  users.py
transcript_minutes_api/schemas/: auth.py  graph.py  minutes.py  users.py
transcript_minutes_api/tests/: conftest.py
transcript_minutes_api2/: .env  README.md  app.db  pyproject.toml
transcript_minutes_api2/app/: main.py
transcript_minutes_api2/app/modules/: auth_handler.py  database.py  graph_client.py  logger.py  openai_client.py
transcript_minutes_api2/app/routers/: auth.py  graph.py  minutes.py  users.py
transcript_minutes_api2/app/schemas/: auth.py  graph.py  minutes.py  users.py
transcript_minutes_api2/tests/: conftest.py  test_auth.py  test_graph.py  test_minutes.py  test_modules.py  test_schemas.py  test_users.py
transcript_minutes_api2/tests/integration/: conftest.py  test_auth_database_integration.py  test_complete_user_journey.py  test_data_integrity_integration.py  test_database_transaction_integration.py  test_graph_api_workflow.py  test_graph_openai_integration.py  test_graph_sdk_integration.py  test_openai_database_integration.py  test_openai_integration.py  test_performance_integration.py  test_security_integration.py
(+47 files in other folders)
